--- a/author.yml
+++ b/author.yml
@@ -5,10 +5,12 @@ pod_spelling_system:
   # (regardless of what spell check thinks)
   # or stuff that I like to spell incorrectly
   # intentionally
-  stopwords: []
+  stopwords:
+    - OMI
 
 pod_coverage:
   skip: 0
   # format is "Class#method" or "Class",regex allowed
   # for either Class or method.
-  private: []
+  private:
+    - Perl::Critic::Policy::OMI::ProhibitLeadingZeros::WithReasonableExceptions
