--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ version          = 0.01
 
 [@Author::Plicease]
 :version      = 2.06
-travis_status = 1
+travis_status = 0
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 
@@ -16,9 +16,13 @@ remove = strict
 remove = warnings
 remove = base
 
+remove = Perl::Critic::TestUtils
+remove = Perl::Critic::Utils
+
 ;[Prereqs]
 ;Foo::Bar = 0
 
 [Author::Plicease::Upload]
 cpan = 0
+
 
