--- a/dist.ini
+++ b/dist.ini
@@ -16,11 +16,12 @@ remove = strict
 remove = warnings
 remove = base
 
+remove = Perl::Critic::Policy
 remove = Perl::Critic::TestUtils
 remove = Perl::Critic::Utils
 
-;[Prereqs]
-;Foo::Bar = 0
+[Prereqs]
+Perl::Critic = 0
 
 [Author::Plicease::Upload]
 cpan = 0
